[package]
name = "diesel-tracing"
version = "0.1.4"
authors = ["John Children <john@cambridgequantum.com>"]
license = "MIT"
edition = "2018"
description = "Connection telemetry middleware for diesel and tracing"
repository = "https://github.com/CQCL/diesel-tracing"
readme = "README.md"
keywords = ["diesel", "logging", "tracing", "database", "opentelemetry"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []

mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[dependencies]
diesel = { version = "1.4", features = ["network-address"], default-features = false }
ipnetwork = ">=0.12.2, <0.18.0"
tracing = "0.1"

[dev-dependencies]
diesel = { version = "1.4", features = ["mysql", "postgres", "sqlite"] }
