[package]
name = "diesel-tracing"
version = "0.2.0"
authors = ["John Children <john@cambridgequantum.com>"]
license = "MIT"
edition = "2021"
description = "Connection telemetry middleware for diesel and tracing"
repository = "https://github.com/CQCL/diesel-tracing"
readme = "README.md"
keywords = ["diesel", "logging", "tracing", "database", "opentelemetry"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []

statement-fields = []
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres", "diesel/network-address", "ipnetwork"]
sqlite = ["diesel/sqlite"]

[dependencies]
diesel = { version = "2.1", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"], default-features = false }
ipnetwork = { version = ">=0.12.2, <0.21.0", optional = true }
tracing = "0.1"

[dev-dependencies]
diesel = { version = "2.0", features = ["mysql", "postgres", "sqlite"] }
